--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=Take me to the beach
+spring.datasource.url=jdbc:postgresql://localhost:5432/beach
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+
+spring.session.store-type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.session.timeout= 1m
